--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@ html {
     scroll-behavior: smooth;
     scroll-padding-top: 75px;
 }
+body {
+    height: 100vh;
+    background-image: url(./components/assets/img/wall.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 /* Navbar */
 .navbar {
     transition: background-color 0.32s ease-in-out;
@@ -14,7 +21,7 @@ html {
     color: black;
 }
 .navbar-start .navbar-item:hover, .navbar-end .navbar-item:hover {
-    color: rgb(0,200,178);
+    color: #00c8b2;
 }
 .navbar-start .active, .navbar-end .active {
     color: black;
@@ -26,4 +33,47 @@ html {
 .navbar-menu .navbar-end .icons-movement:hover {
     transform: translateY(-6px);
 }
-/*  */
+.navbar-menu .navbar-end .icons-movement:hover {
+    transition: ease-in-out .2s;
+}
+/* Content */
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+.buttons .has-background-custom {
+    background-color: rgb(0,200,178);
+    border: 1px solid white;
+    color: white;
+    box-shadow: -5px 7px 10px -4px rgba(0,200,178,0.42);
+    -webkit-box-shadow: -5px 7px 10px -4px rgba(0,200,178,0.42);
+    -moz-box-shadow: -5px 7px 10px -4px rgba(0,200,178,0.42);
+    font-weight: bold;
+}
+.buttons .has-background-custom:hover {
+    transform: translateX(-2px);
+    transform: translateY(-4px);
+    transition: ease-in-out .2s;
+}
+@media(max-width: 767px) { /* <== You can change this break point as per your  needs */
+    .reverse-columns {
+      flex-direction: column-reverse;
+      display: flex;
+    }
+}
+#avatar {
+    animation-duration: 3s;
+    animation-name: avatarAnima;
+    animation-iteration-count: infinite;
+}
+@keyframes avatarAnima {
+    0%    {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-8px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
