--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 /* Global */
 html {
     scroll-behavior: smooth;
@@ -9,6 +10,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Ubuntu', sans-serif;
 }
 /* Navbar */
 .navbar {
@@ -51,9 +53,9 @@ body {
     font-weight: bold;
 }
 .buttons .has-background-custom:hover {
-    transform: translateX(-2px);
-    transform: translateY(-4px);
+    transform: translateY(-3px);
     transition: ease-in-out .2s;
+    background-color: rgba(3, 180, 159, 0.8);
 }
 @media(max-width: 767px) { /* <== You can change this break point as per your  needs */
     .reverse-columns {
