--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,18 @@ body {
 .has-text-main {
     color: #00c8b2;
 }
+/* Projects section */
+#tech {
+    display: flex;
+    gap: 2%;
+}
+.image img:hover {
+    scale: 1;
+}
+#tech .purple {
+    background-color: purple;
+    color: white;
+}
 /* Contact me */
 #contact-me {
     background-color:#00c8b2;
@@ -139,28 +151,4 @@ body {
 #submitForm:hover {
     background-color: rgba(3, 180, 159, 0.8);
     transition: ease .3s;
-}
-/* Projects section */
-#panel {
-    position: relative;
-    & .mockup-img {
-        border-radius: 20px;
-    }
-}
-.overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.overlay:hover {
-    background-color: rgba(0, 0, 0, 30%);
-    transition: background .2s ease-in-out;
-    cursor: pointer;
 }
